--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="auth-container">
+    <div class="form-container">
+      <h2>Sign In</h2>
+      <form>
+        <div class="input-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Enter your email" />
+        </div>
+        <div class="input-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter your password" />
+        </div>
+        <div class="button-container">
+          <button type="submit">Sign In</button>
+        </div>
+      </form>
+      <div class="link-container">
+        <p>Don't have an account? <a routerLink="/register">Sign Up</a></p>
+      </div>
+    </div>
+  </div>
+  
